[package]
name = "pda-token-vault"
version = "0.1.0"
description = "PDA Whitelist + Token Extensions Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pda_token_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-pod = "0.2"
solana-program = "1.18"

[dev-dependencies]
solana-sdk = "1.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug"))'] }
