[package]
name = "transfer-hook-vault"
version = "0.1.0"
description = "Transfer Hook Vault with whitelist functionality"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
spl-type-length-value = "0.4"
spl-pod = "0.2"
solana-program = "1.18"

[dev-dependencies]
litesvm = "0.3"
solana-sdk = "1.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug"))'] }
